<resources>

    <string name="app_name">Smart\nPantry</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="google">Google</string>
    <string name="bienvenido_a_smartpantry">Bienvenido a SmartPantry</string>
    <string name="des_bt_add">este boton sirve para añadir un almacen</string>
    <string name="hint_bt_add">boton add almacen</string>
    <string name="bt_cart">boton cart</string>
    <string name="bt_cart_des">este boton sirve para ir al carrito de la compra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="busque_el_alimento_que_desee">busque el alimento que desee</string>
    <string name="editar_nombre">editar nombre</string>
    <string name="eliminar_almacen">eliminar almacen</string>
    <string name="repeat_the_password">Repeat the password</string>
    <string name="cuenta">Cuenta</string>
    <string name="privacidad">Privacidad</string>
    <string name="seguridad">Seguridad</string>
    <string name="compartir_perfil">Compartir perfil</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="carrito_text">Este es tu carrito de la compra</string>
    <string name="productos_comprados">Productos comprados</string>
    <string name="carrito">Carrito</string>
    <string name="a_adir_al_carrito">Añadir al carrito</string>


</resources>