<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gris_claro"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="207dp"
            android:src="@drawable/logotipo"
            android:layout_marginTop="40dp"/>
    </LinearLayout>




    <EditText
        android:id="@+id/editTextEmail"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:elevation="2.5dp"
        android:ems="10"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/editTextPassword2"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:elevation="2.5dp"
        android:ems="10"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/editTextPassword"
        android:hint="@string/repeat_the_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:elevation="2.5dp"
        android:ems="10"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textViewForgotPassword"
        style="@style/viewCustom"
        android:layout_marginTop="8dp"
        android:text="Ya tienes cuenta? Inicia sesión"
        android:textAlignment="center"
        android:textSize="17dp"
        android:onClick="setLogin"
        android:textColor="@color/black"/>


    <TextView
        android:id="@+id/textViewregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:text="@string/register"
        android:textSize="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:paddingTop="10dp"
        android:onClick="register"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/google"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="textStart"
        android:elevation="10dp"
        android:drawableLeft="@drawable/google"
        android:onClick="callSignInGoogle"
        android:layout_marginTop="20dp" />




</LinearLayout>