<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_claro"
    tools:context=".fragments.MainFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="15dp"
        android:text="Tus almacenes."
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAlmacenes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_almacen">

        </androidx.recyclerview.widget.RecyclerView>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <ImageButton
            android:id="@+id/btAddAlmacen"
            android:layout_width="132dp"
            android:layout_height="61dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/des_bt_add"
            android:hint="@string/hint_bt_add"
            android:scaleType="center"
            android:src="@drawable/ic_add" />

        <ImageButton
            android:id="@+id/btCart"
            android:layout_width="132dp"
            android:layout_height="61dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/bt_cart_des"
            android:hint="@string/bt_cart"
            android:scaleType="center"
            android:src="@drawable/ic_cart"
            tools:ignore="ContentDescription" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>