<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CarritoFragment"
    android:background="@color/gris_claro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/background_panel_naranja">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carrito_text"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>
            <AutoCompleteTextView
                android:id="@+id/etBusquedaAlimento"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/gris_oscuro"
                android:hint="@string/busque_el_alimento_que_desee"
                android:drawableStart="@drawable/ic_lupa_blanca"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:background="@drawable/background_search"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"/>
        </FrameLayout>

       <LinearLayout
           android:id="@+id/lytSinAlimentos"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">

           <TextView
               android:id="@+id/icFlecha"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:drawableStart="@drawable/ic_flecha"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="50dp"
               android:layout_marginBottom="25dp" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="La lista de la compra esta vacia"
               android:layout_gravity="center_horizontal"
               android:textSize="25dp"
               android:textColor="@color/black"/>
       </LinearLayout>

        <LinearLayout
            android:id="@+id/lytCarrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/carrito"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/shape"
                android:layout_margin="5dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvCarrito"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:listitem="@layout/item_carrito"/>
                </ScrollView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytProductosComprados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/productos_comprados"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/shape"
                android:layout_margin="5dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvComprados"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:listitem="@layout/item_carrito_comprado"/>
                </ScrollView>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>